# mars

./: .gitignore  CMakeLists.txt  README.md
config/: azimut3.cfg  black_box-8.cfg  chime.cfg  cube.cfg  irl1.cfg  matrixcreator.cfg  plane.cfg  respeaker_array.cfg  twomics.cfg  xmos_7.cfg
demo/: client.c  demo.c  demo_fftinfo.c  demo_offline.c  demo_rawinfo.c  demo_record.c  demo_sslt.c  demo_test.c  server.c  swarm.c  test.c  twtm.c
demo/parameters/: parameters.c  parameters.h  parameters2config.c  parameters2config.h
doc/: documentation.cfg
docker/: Dockerfile  Makefile
include/mars/: mars.h
src/: mars.h
src/general/: args2arguments.c  args2arguments.h  arguments.c  arguments.h  circle.h  configs.c  configs.h  configs2objects.c  configs2objects.h  file2parameters.c  file2parameters.h  map.c  map.h  name.c  name.h  objects.c  objects.h  objects2objects.c  objects2objects.h  parameters.c  parameters.h  parameters2configs.c  parameters2configs.h  parser.c  parser.h  profiler.c  profiler.h  sphere.c  tdoa.c  tdoa.h  window.h
src/init/: combining.c  combining.h  delay.c  delay.h  hit.c  hit.h  linking.c  linking.h  lowpass.c  lowpass.h  scanning.c  scanning.h  space.c  space.h  windowing.c  windowing.h
src/message/: msg_hops.c  msg_hops.h  msg_pots.c  msg_pots.h  msg_spectra.c  msg_spectra.h  msg_tracks.c  msg_tracks.h  msg_xcs.c  msg_xcs.h
src/module/: mod_gcc.c  mod_gcc.h  mod_resample.c  mod_resample.h  mod_ssl.c  mod_ssl.h  mod_sst.c  mod_sst.h  mod_stft.c  mod_stft.h  ssl.c  ssl.h  ssl_aimg.c  ssl_aimg.h  sst.c  sst.h  stft.c  stft.h
src/probe/: snapshot.c  snapshot.h
src/signal/: aimg.c  aimg.h  area.h  assignation.c  assignation.h  coherence.c  coherence.h  delta.c  delta.h  fir.c  fir.h  frame.c  frame.h  freq.c  freq.h  hop.c  hop.h  impulse.h  index.c  index.h  kalman.c  kalman.h  map.c  map.h  matrix.c  matrix.h  mic.c  mic.h  mixture.c  mixture.h  particle.c  particle.h  point.c  point.h  postprob.c  postprob.h  pot.c  pot.h  scan.c  scan.h  (+16 more)
src/sink/: hop2raw.c  hop2raw.h  snk_pots.c  snk_pots.h  snk_pots_file.c  snk_pots_file.h  snk_pots_socket.c  snk_pots_socket.h  snk_raw.c  snk_raw.h  snk_raw_file.c  snk_raw_file.h  snk_raw_socket.c  snk_raw_socket.h  snk_spectra_file.c  snk_spectra_file.h  snk_tracks.c  snk_tracks.h  snk_tracks_file.c  snk_tracks_file.h  snk_tracks_socket.c  snk_tracks_socket.h  snk_xcs_file.c  snk_xcs_file.h  vector2file.c  vector2file.h
src/source/: eightsnd2hop.c  eightsnd2hop.h  raw2hop.c  raw2hop.h  src_eightsnd.c  src_eightsnd.h  src_raw.c  src_raw.h  src_raw_8soundusb.c  src_raw_8soundusb.h  src_raw_file.c  src_raw_file.h  src_raw_soundcard.c  src_raw_soundcard.h  src_wav_file.c  src_wav_file.h
src/system/: aimg.c  aimg.h  analysis.c  analysis.h  bufferphasor.c  bufferphasor.h  crossphasor.c  crossphasor.h  frame2freq.c  frame2freq.h  freq2freq.c  freq2freq.h  freq2mcra.c  freq2mcra.h  freq2phase.c  freq2phase.h  freq2softmask.c  freq2softmask.h  freq2xcorr.c  freq2xcorr.h  hop2frame.c  hop2frame.h  hop2hop.c  hop2hop.h  kalman2coherence.c  kalman2coherence.h  kalman2kalman.c  kalman2kalman.h  mask.c  mask.h  maxxcorr.c  maxxcorr.h  mcra.c  mcra.h  mcra2mask.c  mcra2mask.h  mixture2mixture.c  mixture2mixture.h  particle2coherence.c  particle2coherence.h  (+28 more)
src/utils/: array.c  array.h  circle.c  coord.c  coord.h  distribution.c  distribution.h  exp.c  exp.h  fft.c  fft.h  fifo.c  fifo.h  gaussian.c  gaussian.h  indexing.c  indexing.h  matrix.c  matrix.h  minmax.c  minmax.h  pair.c  pair.h  pcm.c  pcm.h  random.h  sort.c  sort.h  sphere.h  tdoa.h  window.c  window.h
webUI/: configure.html  fiddle1.html  fiddle_drag.html  init_putin.sh  legal.html  live_data.html  load_test.sh  package.json  play_putin.sh  server.js
webUI/ressources/css/: style.css
webUI/ressources/js/: audio_stream.js  data_socket.js  graph.js  interface.js  source_sphere.js  tcp_link.js
webUI/views/: configure.html  legal.html
